# home

./: gift-city-deep-dive.jsx  index.html  krabi-family-trip-may-2026.html  portkey-the-green-room-script.html  real-estate-recon.jsx  vercel.json
agent-gateway/: index.html  print.html
agent-gateway/slides/: Slide01_Cover.jsx  Slide02_Problem.jsx  Slide03_Idea.jsx  Slide04_Architecture.jsx  Slide05_Pillars.jsx  Slide06_DropIn.jsx  Slide07_Questions.jsx  app.jsx
gift-city-deep-dive/: index.html
hyd-east/: index.html
pomodoro/: .gitignore  AGENT-SOUL.md  CLAUDE.md  DNA-MEMORY.md  HANDOFF.md  HUMAN-INSTRUCTIONS.md  ISSUES.md  JATI-MEMORY.md  PLAN.md  README.md  index.html  install.sh  package-lock.json  package.json  pomodoro-menu.500ms.sh  pomodoro-timer.500ms.sh  pomodoro.1s.sh  test-simple.js  test-tray.js  test-window.js  test.html  tsconfig.json
pomodoro/.claude/: settings.local.json
pomodoro/.cursor/commands/: handoff.md  init.md  janma.md  moksha.md  nav-janma.md  punar-janma.md
pomodoro/.cursor/rules/: documentation-hygiene.mdc
pomodoro/installer/: Install Pomodoro.applescript  build-break-app.sh  build-dmg.sh
pomodoro/scripts/: create-icons.js
pomodoro/src/break-screen/: app.js  index.html  main.js  package-lock.json  package.json  styles.css
pomodoro/tauri-app/: package-lock.json
pomodoro/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
pomodoro/tauri-app/src-tauri/capabilities/: default.json
pomodoro/tauri-app/src-tauri/src/: lib.rs  main.rs  persistence.rs  timer.rs
real-estate-recon/: index.html
vendors/: index.html
(+21 files in other folders)
